Fix API implementation.
